# grafeo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  bench-thresholds.toml  mkdocs.yml
.github/workflows/: ci.yml  codspeed.yml
crates/bindings/csharp/src/Grafeo/: Grafeo.csproj
crates/bindings/dart/: CHANGELOG.md  README.md  pubspec.yaml
crates/bindings/node/: Cargo.toml  index.js  package.json
crates/bindings/node/npm/darwin-arm64/: package.json
crates/bindings/node/npm/darwin-x64/: package.json
crates/bindings/node/npm/linux-arm64-gnu/: package.json
crates/bindings/node/npm/linux-arm64-musl/: package.json
crates/bindings/node/npm/linux-x64-gnu/: package.json
crates/bindings/node/npm/win32-x64-msvc/: package.json
crates/bindings/node/src/: types.rs
crates/bindings/python/: pyproject.toml
crates/bindings/python/src/: database.rs
crates/bindings/python/tests/: test_storage_tiers.py
crates/bindings/python/tests/bases/: test_dataframe.py
crates/bindings/wasm/: Cargo.toml  package-lite.json  package.json
crates/bindings/wasm/src/: codecs.rs  lib.rs
crates/bindings/wasm/tests/: web.rs
crates/grafeo-adapters/src/plugins/algorithms/: community.rs  structure.rs
crates/grafeo-adapters/src/query/: schema.rs
crates/grafeo-adapters/src/query/cypher/: parser.rs
crates/grafeo-adapters/src/query/gql/: parser.rs
crates/grafeo-adapters/src/query/graphql/: lexer.rs
crates/grafeo-adapters/src/query/gremlin/: ast.rs  lexer.rs  parser.rs
crates/grafeo-cli/src/: repl.rs
crates/grafeo-cli/src/output/: formatter.rs  mod.rs
crates/grafeo-common/: Cargo.toml
crates/grafeo-common/benches/: arena_bench.rs
crates/grafeo-common/src/: encryption.rs  mvcc.rs
crates/grafeo-common/src/memory/: arena.rs
crates/grafeo-common/src/memory/buffer/: manager.rs
crates/grafeo-common/src/storage/: section.rs
crates/grafeo-common/src/types/: date.rs  duration.rs  hlc.rs  time.rs  timestamp.rs  value.rs
crates/grafeo-common/src/utils/: error.rs
crates/grafeo-core/: Cargo.toml
crates/grafeo-core/benches/: codec_views.rs  index_bench.rs  layered_dirty_bench.rs  rabitq_vs_pq.rs  top_k.rs
crates/grafeo-core/src/codec/: bitpack.rs  bitstream.rs  bitvec.rs  delta.rs  dictionary.rs  epoch_store.rs  fsst.rs  mod.rs  runlength.rs  selector.rs  webgraph.rs
crates/grafeo-core/src/codec/succinct/: elias_fano.rs  rank_select.rs  wavelet.rs
crates/grafeo-core/src/execution/: chunk.rs  factorized_chunk.rs  factorized_vector.rs  pipeline_convert.rs  profile.rs  selection.rs  source.rs  vector.rs
crates/grafeo-core/src/execution/operators/: aggregate.rs  (+19 more)
crates/grafeo-core/src/graph/: mod.rs  traits.rs
crates/grafeo-core/src/index/: zone_map.rs
crates/grafeo-core/tests/: codec_size_report.rs  codec_view_parity.rs  fsst_round_trip.rs  phase5_design_probes.rs  rabitq_recall.rs  webgraph_round_trip.rs
crates/grafeo-engine/: Cargo.toml
crates/grafeo-engine/benches/: memory_bench.rs  query_bench.rs  regression_bench.rs  serialization_bench.rs  topk_e2e.rs
crates/grafeo-engine/src/: cdc.rs  config.rs  lib.rs  memory_usage.rs  metrics.rs
crates/grafeo-engine/src/database/: admin.rs  arrow.rs  backup.rs  index.rs  mod.rs  persistence.rs  section_consumer.rs
crates/grafeo-engine/src/embedding/: onnx.rs
crates/grafeo-engine/src/execution/spill/: async_file.rs
crates/grafeo-engine/src/query/: binder.rs  plan.rs  processor.rs  profile.rs
crates/grafeo-engine/src/query/executor/: mod.rs
crates/grafeo-engine/src/query/optimizer/: cardinality.rs  cost.rs  join_order.rs  mod.rs
crates/grafeo-engine/src/query/planner/: common.rs
crates/grafeo-engine/src/query/planner/lpg/: aggregate.rs  expression.rs  filter.rs  filter_hybrid.rs  mod.rs  mutation.rs  project.rs
crates/grafeo-engine/src/query/planner/rdf/: mod.rs
crates/grafeo-engine/src/query/translators/: cypher.rs  graphql.rs  graphql_rdf.rs  gremlin.rs  sparql.rs  sql_pgq.rs
crates/grafeo-engine/src/query/translators/gql/: mod.rs
crates/grafeo-engine/src/session/: mod.rs  rdf.rs
crates/grafeo-engine/src/validation/: mod.rs
crates/grafeo-engine/tests/: compact_roundtrip_proptest.rs  compact_store_integration.rs  coverage_aggregates.rs  coverage_memory.rs  expression_and_projection.rs  extract_subgraph.rs  gql_spec_compliance.rs  grafeo_file.rs  gremlin.rs  hybrid_pushdown_coverage.rs  hybrid_query.rs  hybrid_store_integration.rs  planner_lpg_coverage.rs  post_compact_numeric_content.rs  post_compact_overlay_visibility.rs  project_coverage.rs  regression_external.rs  schema_type_isolation.rs  session_wal_durability.rs  snapshot.rs  snapshot_multi.rs  snapshot_multi_diagnostics.rs  storage_tier_overrides.rs  topk_rewrite.rs
crates/grafeo-storage/: Cargo.toml
crates/grafeo-storage/benches/: wal_bench.rs
crates/grafeo-storage/src/container/: directory.rs
crates/grafeo-storage/src/file/: format.rs  header.rs  manager.rs
crates/grafeo-storage/src/wal/: async_log.rs  flusher.rs  log.rs
docs/: index.md
docs/algorithms/: metrics.md
docs/architecture/memory/: storage-tiers.md
docs/architecture/storage/: disk-storage-decisions.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/overrides/: main.html
docs/superpowers/plans/: 2026-04-14-unified-hybrid-queries.md  2026-05-22-plan-2-grafeo-compression-codecs.md  2026-05-22-plan-2a-rabitq-vector-codec.md  2026-05-22-plan-2b-webgraph-adjacency-codec.md  2026-05-22-plan-2c-fsst-string-codec.md  2026-05-22-plan-2d-zero-copy-views-and-fsst-integration.md
docs/superpowers/specs/: 2026-04-14-unified-hybrid-queries-design.md
docs/user-guide/: transactions.md
docs/user-guide/vector-search/: filter-expressions.md
scripts/: build-wasm-all.ps1  build-wasm-all.sh  build-wasm.ps1  build-wasm.sh
tests/spec/common/: hybrid_queries.gtest
tests/spec/lpg/cypher/: writing_clauses.gtest
tests/spec/lpg/gql/: 15.1_insert.gtest  15.2_set.gtest  15.3_remove_delete.gtest  20.1_schema_ddl.gtest
tests/spec/lpg/gremlin/: error_cases.gtest  predicates_extended.gtest
tests/spec/rdf/sparql/: error_cases.gtest
(+56 files in other folders)
