[package]
name = "grafeo-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Query engine and database management for Grafeo"

[dependencies]
grafeo-common.workspace = true
grafeo-core = { workspace = true, default-features = false }
grafeo-adapters = { workspace = true, default-features = false }
grafeo-storage = { workspace = true, default-features = false, optional = true }

# Error handling
thiserror.workspace = true

# Data structures
arcstr.workspace = true
smallvec.workspace = true
hashbrown.workspace = true
indexmap.workspace = true

# Concurrency
parking_lot.workspace = true
crossbeam = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

# Serialization
serde.workspace = true
bincode.workspace = true

# Regex for SPARQL FILTER (use regex-lite for smaller WASM builds)
regex = { workspace = true, optional = true }
regex-lite = { workspace = true, optional = true }

# Cryptographic hashes for SPARQL hash functions (optional, RDF only)
md5 = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

# Async runtime (optional, for async-storage feature)
tokio = { workspace = true, optional = true }

# Tracing (optional, zero-cost when disabled)
tracing = { workspace = true, optional = true }

# Arrow (optional, for zero-copy data export)
arrow-schema = { workspace = true, optional = true }
arrow-array = { workspace = true, optional = true }
arrow-ipc = { workspace = true, optional = true }

# Embedding (optional, for ONNX embedding generation)
ort = { version = "2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
tokenizers = { version = "0.23", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", optional = true }
crc32fast = { workspace = true, optional = true }

# Memory-mapped files (optional, for compact-store mmap spill)
memmap2 = { workspace = true, optional = true }

# Refcounted byte slices for mmap-backed column storage (Phase 3c)
bytes.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
serde_json = "1"
tokio.workspace = true
proptest.workspace = true

[features]
default = ["lpg", "gql", "parallel", "wal", "grafeo-file", "spill", "mmap", "regex"]
lpg = ["grafeo-core/lpg"]  # Enable LPG (labeled property graph) model
regex = ["dep:regex", "grafeo-core/regex"]
regex-lite = ["dep:regex-lite", "grafeo-core/regex-lite"]
gql = ["grafeo-adapters/gql"]
cypher = ["grafeo-adapters/cypher", "gql"]
sparql = ["grafeo-adapters/sparql"]
gremlin = ["grafeo-adapters/gremlin"]
graphql = ["grafeo-adapters/graphql"]
sql-pgq = ["grafeo-adapters/sql-pgq"]  # SQL/PGQ (SQL:2023 GRAPH_TABLE)
triple-store = ["grafeo-core/triple-store", "grafeo-adapters/triple-store", "md5", "sha1", "sha2", "regex"]  # RDF triple store model and planner
ring-index = ["grafeo-core/ring-index", "triple-store"]  # Ring Index for compact RDF (3x memory reduction)
shacl = ["grafeo-core/shacl", "sparql"]  # SHACL validation (core constraints + SPARQL dispatch)
rdf = ["triple-store"]  # Deprecated: use triple-store
parallel = ["rayon", "crossbeam", "grafeo-core/parallel", "grafeo-adapters/parallel"]  # Parallel execution
algos = ["grafeo-adapters/algos"]  # Graph algorithm plugin (SSSP, PageRank, etc.)
wal = ["dep:grafeo-storage", "grafeo-storage/wal"]  # Write-ahead log storage
async-storage = ["dep:grafeo-storage", "grafeo-storage/async-storage", "dep:tokio"]  # Async WAL and storage backend
grafeo-file = ["dep:grafeo-storage", "grafeo-storage/grafeo-file", "dep:crc32fast"]  # Single-file .grafeo format
encryption = ["dep:grafeo-storage", "grafeo-common/encryption", "grafeo-storage/encryption"]  # AES-256-GCM encryption at rest
spill = ["grafeo-core/spill"]  # Disk spilling for out-of-core execution
mmap = ["grafeo-core/mmap", "dep:memmap2"]  # File-backed vector storage and compact-store spill
temporal = ["grafeo-core/temporal"]  # Append-only versioned properties
compact-store = ["grafeo-core/compact-store"]  # CompactStore — columnar graph for read-only workloads
# Convenience groups
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]  # All query language parsers
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]  # All AI/RAG features
storage = ["wal", "grafeo-file", "spill", "mmap"]  # Persistent storage (WAL, single-file, disk spill, mmap)

# Named profiles (ecosystem-aligned)
embedded = ["lpg", "gql", "ai", "algos", "parallel", "regex", "jsonl-import", "grafeo-file", "arrow-export"]  # Python libs, MCP, in-process
browser = ["lpg", "gql", "regex-lite"]  # WASM / grafeo-web
server = ["full", "async-storage", "metrics", "tracing"]  # grafeo-server
full = ["lpg", "languages", "ai", "triple-store", "parallel", "algos", "storage", "jsonl-import", "parquet-import"]

# Data import
jsonl-import = ["grafeo-core/jsonl-import"]  # JSON Lines file import
parquet-import = ["grafeo-core/parquet-import"]  # Apache Parquet file import

# Search & AI features
vector-index = ["grafeo-core/vector-index"]  # HNSW vector index for k-NN search
text-index = ["grafeo-core/text-index"]  # BM25 inverted index for full-text search
hybrid-search = ["grafeo-core/hybrid-search", "text-index", "vector-index"]  # Combined text + vector search
cdc = []  # Change data capture with history API
metrics = []  # Lock-free query, transaction, and session metrics
embed = ["ort", "tokenizers", "hf-hub"]  # ONNX embedding generation (opt-in, adds ~17MB)
tracing = ["dep:tracing", "grafeo-common/tracing", "grafeo-adapters/tracing"]  # Observability spans and events

# Data export
arrow-export = ["dep:arrow-schema", "dep:arrow-array", "dep:arrow-ipc"]  # Arrow IPC zero-copy export

# Testing utilities (zero overhead when disabled)
testing-crash-injection = ["dep:grafeo-storage", "grafeo-common/testing-crash-injection", "grafeo-storage/testing-crash-injection"]  # Crash injection for recovery testing
testing-statement-injection = ["grafeo-common/testing-statement-injection"]  # Failure injection at statement / commit entry for rollback atomicity tests

[lints]
workspace = true

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "serialization_bench"
harness = false

[[bench]]
name = "regression_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false

[[bench]]
name = "topk_e2e"
harness = false
