[package]
name = "grafeo-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node.js/TypeScript bindings for Grafeo graph database"

[lib]
crate-type = ["cdylib"]
doc = false

[dependencies]
grafeo-engine = { path = "../../grafeo-engine" }
grafeo-core = { path = "../../grafeo-core" }
grafeo-common = { path = "../../grafeo-common" }
grafeo-adapters = { path = "../../grafeo-adapters" }
grafeo-bindings-common = { path = "../common" }

napi = { version = "3", default-features = false, features = ["napi9", "async", "serde-json", "error_anyhow"] }
napi-derive = "3.5.3"
parking_lot.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

[features]
default = ["embedded"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
sparql = ["grafeo-engine/sparql", "grafeo-engine/triple-store"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
cdc = ["grafeo-engine/cdc"]
embed = ["grafeo-engine/embed"]
algos = ["grafeo-engine/algos"]
triple-store = ["grafeo-engine/triple-store"]
shacl = ["grafeo-engine/shacl"]
compact-store = ["grafeo-engine/compact-store"]
arrow-export = ["grafeo-engine/arrow-export"]
jsonl-import = ["grafeo-engine/jsonl-import"]
parquet-import = ["grafeo-engine/parquet-import"]
metrics = ["grafeo-engine/metrics"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
ai = ["vector-index", "text-index", "hybrid-search", "cdc"]
storage = ["grafeo-engine/storage"]
# Persona-based profiles
lpg = ["grafeo-engine/lpg", "gql", "cypher", "gremlin", "sql-pgq", "storage", "grafeo-engine/regex"]
rdf = ["triple-store", "gql", "sparql", "graphql", "storage", "grafeo-engine/regex", "shacl"]
analytics = ["algos", "vector-index", "text-index", "hybrid-search", "jsonl-import", "parquet-import"]
edge = ["grafeo-engine/lpg", "gql", "grafeo-engine/regex-lite"]
# Deployment-based profiles (deprecated)
embedded = ["gql", "ai", "algos", "compact-store", "arrow-export", "grafeo-engine/parallel", "grafeo-engine/regex", "grafeo-engine/grafeo-file"]
full = ["languages", "ai", "algos", "triple-store"]

[lints]
workspace = true
