[package]
name = "grafeo-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WebAssembly bindings for Grafeo graph database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
grafeo-engine = { workspace = true, features = ["gql", "regex-lite"] }
grafeo-core = { workspace = true, default-features = false, optional = true }
grafeo-common.workspace = true
grafeo-bindings-common = { path = "../common", default-features = false }

# WASM bindings
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

# Better panic messages in browser console
console_error_panic_hook = "0.1"

# Serialization (for snapshot export/import)
serde.workspace = true
serde_json = "1.0"

# Snapshot integrity (HMAC-SHA256 over exported bytes)
hmac = "0.13"
sha2 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["browser"]
gql = ["grafeo-engine/gql"]
cypher = ["grafeo-engine/cypher"]
rabitq-codec = ["dep:grafeo-core"]
fsst-codec = ["dep:grafeo-core"]
rdf-model = ["grafeo-engine/triple-store", "dep:grafeo-core", "grafeo-core/triple-store"]
sparql = ["grafeo-engine/sparql", "rdf-model"]
gremlin = ["grafeo-engine/gremlin"]
graphql = ["grafeo-engine/graphql"]
sql-pgq = ["grafeo-engine/sql-pgq"]
vector-index = ["grafeo-engine/vector-index"]
text-index = ["grafeo-engine/text-index"]
hybrid-search = ["grafeo-engine/hybrid-search"]
algos = ["grafeo-engine/algos"]
languages = ["gql", "cypher", "sparql", "gremlin", "graphql", "sql-pgq"]
compact-store = ["grafeo-engine/compact-store"]
# Persona-based profiles
lpg = ["grafeo-engine/lpg", "gql", "cypher", "gremlin", "sql-pgq", "grafeo-engine/regex"]  # Graph App Developer
rdf = ["rdf-model", "gql", "sparql", "graphql", "grafeo-engine/regex-lite"]  # Knowledge Engineer
ai = ["vector-index", "text-index", "hybrid-search"]  # AI/Agent Developer
analytics = ["ai", "algos"]  # Data Scientist (ai search + graph algorithms)
edge = ["grafeo-engine/lpg", "gql", "compact-store", "grafeo-engine/regex-lite"]  # Frontend/Edge
# Deployment-based profiles (deprecated)
browser = ["edge"]  # Deprecated: use edge
full = ["lpg", "languages", "ai", "algos"]

[lints]
workspace = true
